test/fixtures/type-error/ifConditionNonBoolean.ro
type f32

fun x() =
  if (1.2)
    1.0
  else
    0.0